[tool.poetry]
name = "avito-py"
version = "0.0.1.1"
description = "SDK для разработки инструментов на базе Avito API"
authors = ["Nikolay Baryshnikov <root@k0d.ru>"]
packages=[
    { include = "avito" },
]
license="MIT"
readme="README.md"
homepage="https://github.com/p141592/avito"
repository="https://github.com/p141592/avito"
keywords=["avito", "sdk", "python", "api"]
classifiers=[
    "License :: OSI Approved :: MIT License",
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "Natural Language :: Russian",
    "Natural Language :: English",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

[tool.poetry.dependencies]
python = "^3.12"
httpx = "^0.28.1"
backoff = "^2.2.1"
loguru = "^0.7.3"
pydantic = "^2.10.4"
pydantic-settings = "^2.7.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
